--- a/metric-conversion.html
+++ b/metric-conversion.html
@@ -19,7 +19,10 @@
 
 			<p>Measurement: </p><input type="text" name="value1" id="value1"><br>
 
-			<button class="button" onclick="fToM()">Convert</button>
+			<button class="button" onclick="fToM()">Meters</button>
+						<button class="button" onclick="inchesToCentimeters()">Centimeters</button>
+									<button class="button" onclick="yardsToMeters()">Yards to Meters</button>
+												<button class="button" onclick="milesToKilometers()">Kilometers</button>
 
 			<p id="resultsentence"></p>
         </div>
